# safe_cast

./: CMakeLists.txt  LICENCE  README.md  safe_cast.h
tests/: CMakeLists.txt  tests.cpp
